--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/MAP_Dual.MAP_Dual
+GlobalDefaultGameMode=/Game/Blueprints/GM_Dual.GM_Dual_C
+EditorStartupMap=/Game/Maps/MAP_Dual.MAP_Dual
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
